# elf-utilities

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: dynamic.rs  file.rs  header.rs  lib.rs  parser.rs  relocation.rs  section.rs  segment.rs  symbol.rs
src/dynamic/: elf32.rs  elf64.rs  entry_type.rs  flags.rs
src/file/: base.rs  elf32.rs  elf64.rs  mod.rs
src/header/: base.rs  class.rs  data.rs  elf32.rs  elf64.rs  elf_type.rs  machine.rs  mod.rs  osabi.rs  version.rs
src/parser/: error.rs  parse.rs  parser.rs  raw.rs
src/parser/testdata/: 32bit  sample
src/relocation/: elf32.rs  elf64.rs  mod.rs
src/section/: base.rs  elf32.rs  elf64.rs  mod.rs  section_flag.rs  section_type.rs  util.rs
src/segment/: base.rs  elf32.rs  elf64.rs  mod.rs  segment_flag.rs  segment_type.rs
src/symbol/: elf32.rs  elf64.rs  mod.rs  symbol_bind.rs  symbol_type.rs  symbol_visibility.rs  util.rs
tests/: generate.rs
