[package]
name = "elf-utilities"
version = "0.1.19"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Utilities for parsing,generating,analyzing ELF"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
