[package]
name = "elf-utilities"
version = "0.1.72"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Utilities for parsing,generating,analyzing ELF"
documentation = "https://docs.rs/elf-utilities"
homepage = "https://github.com/Drumato/elf-utilities"
repository = "https://github.com/Drumato/elf-utilities"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.116", features = ["derive"] }
bincode = "1.3.1"
thiserror = "1.0.20"
